--- a/storefront/package.json
+++ b/storefront/package.json
@@ -28,7 +28,7 @@
     "js-cookie": "^3.0.5",
     "lodash": "^4.17.21",
     "medusajs-launch-utils": "^0.0.18",
-    "next": "15.3.6",
+    "next": "^15.3.8",
     "next-intl": "^3.26.3",
     "react": "^19.0.1",
     "react-country-flag": "^3.1.0",
